@@ -1,1 +1,9 @@
 # fixjson
+
+## 启动
+
+增加启动参数
+
+```
+--add-modules javafx.controls--add-modules javafx.controls
+```
